--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class="hello">Minesweeper</h1>
     <div class="grid"></div>
     <div class="game-txt"></div>
+    <button id="game-restart">RESTART GAME</button>
   </body>
   <script src="app.js"></script>
 </html>
