--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <h1 class="hello">Minesweeper</h1>
+    <div class="container">
+      <div class="flags-left"></div>
+      <button id="game-restart">RESTART GAME</button>
+      <div class="timer"></div>
+    </div>
     <div class="grid"></div>
     <div class="game-txt"></div>
-    <button id="game-restart">RESTART GAME</button>
   </body>
   <script src="app.js"></script>
 </html>
